Actualización de estilos 2

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 /* Estilos globales */
-body {
+
+html, body {
+  height: 100%;
   margin: 0;
+  padding: 0;  
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -25,22 +31,56 @@ h1 {
   text-align: center;
 }
 
+.contenedor-favoritos{
+  min-height: 80vh; 
+}
+
+.App, .detalle{
+  min-height: 65vh; 
+}
+
+
 div.contenedor {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  padding: 1rem; 
+  width: 100%; 
 }
 
 nav {
   display: flex;
-  width: 80vw;
+  width: 70vw;
   justify-content: flex-end; 
   padding: 1rem;  
   margin: 0 auto;
+  border-bottom: 2px solid #ccc; 
+  transition: border-color 0.3s ease; 
+}
+nav a {
+  text-decoration: none;
+  margin: 0 10px;
+  font-size: 18px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: color 0.3s ease, background-color 0.3s ease; 
 }
 
+nav a[href='/'] {
+  color:#51a6eb;
+}
+
+nav a[href='/favs'] {
+  color: #51a6eb; 
+}
+
+nav a[href='/contact'] {
+  color: #51a6eb; 
+}
+
+nav a:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  color: #103655;
+}
 a {
   color: #000;
   text-decoration: none;
@@ -49,9 +89,42 @@ a {
   transition: color 0.3s ease;
 }
 
+nav a:active {
+  background-color: rgba(255, 255, 255, 0.3);
+  color: rgb(97, 168, 255);
+}
+
 a:hover {
   color: rgb(136, 136, 136);
 }
+
+.resetButton {
+  background-color: #51a6eb; 
+  color: white; 
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  margin-right: 60px; 
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  float: right; 
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+}
+
+
+.resetButton:hover {
+  background-color: #103655; 
+  transform: scale(1.05);
+}
+
+
+.resetButton:active {
+  background-color: #51a6eb; 
+  transform: scale(0.98);
+}
+
 
 footer {
   display: flex;
@@ -114,6 +187,22 @@ form {
   max-width: 1200px;
 }
 
+.theme-toggle-button {
+  background-color: transparent;  
+  border: none; 
+  cursor: pointer;  
+  padding: 10px; 
+}
+
+.theme-toggle-button:hover {
+  transform: scale(1.1);  
+}
+
+.light-mode .theme-toggle-button {
+  background-color: #f0f0f0; 
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+}
+
 /* Estilos para las tablas */
 table {
   border-collapse: collapse;
@@ -172,12 +261,34 @@ table.odontologo-info {
 
 /* Estilos para el modo oscuro */
 .dark-mode {
-  background-color: #121212;  
+  background-color: #1e1e1e;  
   color: white;  
 }
 
 .dark-mode nav {
+  border-bottom: 2px solid #444; 
+}
+
+.dark-mode nav {
   background-color: #1e1e1e;  
+}
+
+.dark-mode nav a[href='/'] {
+  color:#ffffff; 
+}
+
+.dark-mode nav a[href='/favs'] {
+  color:#ffffff; 
+}
+
+.dark-mode nav a[href='/contact'] {
+  color: #ffffff; 
+}
+
+
+.dark-mode nav a:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+  color: #717171;
 }
 
 .dark-mode a {
@@ -201,6 +312,24 @@ table.odontologo-info {
 
 .dark-mode .favButton {
   background-color: #b2b2b2; 
+}
+
+.dark-mode .resetButton {
+  background-color:#b2b2b2; 
+  color: black; 
+  box-shadow: 0px 4px 6px rgba(255, 255, 255, 0.2); 
+}
+
+.dark-mode .resetButton:hover {
+  background-color:  #1e1e1e; 
+  color: white;
+  transform: scale(1.05);
+}
+
+
+.dark-mode .resetButton:active {
+  background-color:#b2b2b2;
+  transform: scale(0.98);
 }
 
 /* Estilos para las tablas en modo oscuro */
@@ -231,4 +360,16 @@ table.odontologo-info {
 
 .dark-mode table.odontologo-info td:first-child {
   background-color: #414141; 
+}
+
+.dark-mode .theme-toggle-button {
+  background-color: #1e1e1e;  
+}
+
+
+.light-mode .theme-toggle-button:hover {
+  background-color: #e0e0e0;  
+}
+.dark-mode .theme-toggle-button:hover {
+  background-color:#1e1e1e; 
 }
